1st finish : 이전 앱과 동일 기능 구현

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
+        android:layout_height="wrap_content"
         android:background="@drawable/top_round_square"
         android:drawableLeft="@drawable/header_img_reduction"
         android:layout_marginTop="10dp"
