--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:background="@drawable/gray_square"
         android:gravity="center"
         android:text="@string/trackInfo"
+        android:tag="trackInfo"
         android:textColor="@color/textBlack"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
@@ -28,6 +29,7 @@
         android:background="@drawable/gray_square"
         android:gravity="center"
         android:text="@string/prodDate"
+        android:tag="prodDate"
         android:textColor="@color/textBlack"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
@@ -42,6 +44,7 @@
         android:background="@drawable/gray_square"
         android:gravity="center"
         android:text="@string/part4m"
+        android:tag="part4m"
         android:textColor="@color/textBlack"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
@@ -56,6 +59,7 @@
         android:background="@drawable/gray_square"
         android:gravity="center"
         android:text="@string/trackNo"
+        android:tag="trackNo"
         android:textColor="@color/textBlack"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
@@ -179,6 +183,7 @@
         android:background="@drawable/gray_square"
         android:gravity="center"
         android:text="@string/aOr"
+        android:tag="aOr"
         android:textColor="@color/textBlack"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
@@ -191,6 +196,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/eoNo"
+        android:tag="eoNo"
         android:gravity="center"
         android:textColor="@color/textBlack"
         android:background="@drawable/gray_square"
@@ -235,6 +241,7 @@
         android:background="@drawable/gray_square"
         android:gravity="center"
         android:text="@string/orderCd"
+        android:tag="orderCd"
         android:textColor="@color/textBlack"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
@@ -276,6 +283,7 @@
         android:background="@drawable/gray_square"
         android:gravity="center"
         android:text="@string/partNo"
+        android:tag="partNo"
         android:textColor="@color/textBlack"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
@@ -317,6 +325,7 @@
         android:layout_marginEnd="10dp"
         android:gravity="center"
         android:text="@string/data"
+        android:tag="data"
         android:textColor="@color/textBlack"
         android:background="@drawable/gray_square"
         android:textStyle="bold"
@@ -332,6 +341,7 @@
         android:layout_marginStart="10dp"
         android:gravity="center"
         android:text="@string/div"
+        android:tag="div"
         android:textColor="@color/textBlack"
         android:background="@drawable/gray_square"
         android:textStyle="bold"
@@ -346,6 +356,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:text="@string/result"
+        android:tag="result"
         android:textColor="@color/textBlack"
         android:background="@drawable/gray_square"
         android:textStyle="bold"
@@ -364,6 +375,7 @@
         android:gravity="center_vertical"
         android:paddingStart="5dp"
         android:text="@string/rawBarCd"
+        android:tag="rawBarCd"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -396,6 +408,7 @@
         android:gravity="center_vertical"
         android:paddingStart="5dp"
         android:text="@string/standardBarCd"
+        android:tag="standardBarCd"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -434,6 +447,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:text="@string/header"
+        android:tag="header"
         android:textColor="@color/textBlack"
         android:background="@drawable/gray_square"
         android:textStyle="bold"
@@ -490,6 +504,7 @@
         android:background="@drawable/gray_square"
         android:gravity="center"
         android:text="@string/compCd"
+        android:tag="compCd"
         android:textColor="@color/textBlack"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
@@ -517,6 +532,7 @@
         android:background="@drawable/gray_square"
         android:gravity="center"
         android:text="@string/specInfo"
+        android:tag="specInfo"
         android:textColor="@color/textBlack"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
@@ -531,6 +547,7 @@
         android:layout_margin="20dp"
         android:background="@drawable/button_square"
         android:text="@string/langs"
+        android:tag="langs"
         android:textColor="@color/white"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -545,6 +562,7 @@
         android:layout_margin="20dp"
         android:background="@drawable/button_square"
         android:text="@string/history"
+        android:tag="history"
         android:textColor="@color/white"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@+id/btnLang"
@@ -560,6 +578,7 @@
         android:layout_margin="20dp"
         android:background="@drawable/button_square"
         android:text="@string/scan"
+        android:tag="scan"
         android:textColor="@color/white"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@+id/btnLang"
@@ -575,6 +594,7 @@
         android:background="@drawable/gray_square"
         android:gravity="center"
         android:text="@string/tailer"
+        android:tag="tailer"
         android:textColor="@color/textBlack"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
